SERVER-63503 $fill.partitionBy accepts string or object